# ACIDD

./: README.md  environment-bge-m3.lock.yml  environment-bge-m3.yml  pyproject.toml  requirements-sentence-transformers.txt  requirements.txt
Supplementary Information/: HRS_cases_bge-large.txt  HRS_cases_mpnet.txt  Loadings_HRS_bge-large.csv  Loadings_HRS_bge-m3.csv  Loadings_HRS_mpnet.csv  Loadings_Xin_bge-large.csv  Loadings_Xin_bge-m3.csv  Loadings_Xin_mpnet.csv  Xinxiang_cases_bgelarge.txt  Xinxiang_cases_mpnet.txt
docs/: HANDOFF.md  allofus_expert_review.md  allofus_integration_plan.md  allofus_preprocessing.md  env_setup.md  nhis_integration_plan.md  notebook_refactor.md  pipeline_overview.md
examples/: prompts_template.csv
examples/allofus/: analyze_ross.py  compare_pca_models.py  convert_allofus.py  plot_item_umap.py  plot_item_umap_models.py  ross_operating_point.py  run_ross_spca.py
examples/nhis/: README.md  convert_nhis.py  run_nhis.sh
examples/prompts/: instrument_a_prompts.csv
scripts/: plot_semantic_outputs.py
src/survey_semantics/: __init__.py  basis.py  cli.py  combined.py  embedding.py  io.py  pipeline.py  plotting.py  prompts.py  scales.py
src/survey_semantics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_basis.py  test_combined.py  test_embedding.py  test_io.py  test_pipeline.py  test_scales_weights.py
